# mytiger

./: README.md  test.sh
chapter1/design1/: main.c  main.h  prog1.c  util.c
chapter1/design2/: main.c  main.h  prog1.h  slp.c  slp.h  util.h
chapter2/: driver.c  lextest  makefile  test.tig  tiger.lex
chapter3/: a.out  lex.yy.c  makefile  test.sh  test.tig  tiger.grm  tiger.grm.old  tiger.lex  tiger.y  tokens.h  y.output  y.tab.c  y.tab.h
chapter4/: .tiger.y.swp  CMakeLists.txt  a.out  errormsg.c  errormsg.h  lex.yy.c  makefile  myparser.y  parse.c  parse.h  tiger.lex  tiger.y  util.c  util.h  y.output  y.tab.c  y.tab.h
chapter5/: CMakeLists.txt  env.c  env.h  makefile  parse.c  semant.c  semant.h  symbol.c  table.c  tiger.y  types.h
chapter6/: absyn.h  env.c  env.h  makefile  parse.c  semant.c  semant.h  symbol.c  symbol.h  test.sh  tiger.lex  tiger.y
hhh/: a.out  makefile  parse.c  parse.h  symbol.c  symbol.h  tiger.y  y.output  y.tab.c
testcases/: queens.tig  test1.tig  test4.tig  test49.tig
